--- a/web-app/templates/contact.html
+++ b/web-app/templates/contact.html
@@ -1,57 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us</title>
-    <link
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link href="/static/css/styles.css" rel="stylesheet" />
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="/">Brain Tumor Segmentation</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/team">Team</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="/contact">Contact Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/about">About Us</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <div class="container mt-5 content">
-      <h1>Contact Us</h1>
-      <p>Coming soon (WIP)</p>
+{% extends "base.html" %} {% block title %}Contact Us{% endblock %} {% block
+content %}
+<h1>Contact Us</h1>
+<div class="card mb-3 border">
+  <div class="card-body">
+    <h5 class="card-title">Get in Touch</h5>
+    <p class="card-text">
+      If you have any questions or need further information, please feel free to
+      contact us.
+    </p>
+    <p class="card-text">
+      <strong>Email:</strong> contact@brainsegmentation.com
+    </p>
+    <p class="card-text"><strong>Phone:</strong> +91-123-456-7890</p>
+    <p class="card-text">
+      <strong>Address:</strong> Indian Institute of Technology Ropar, Punjab,
+      India
+    </p>
+    <div class="card-text">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11506.828976301826!2d76.47226510945788!3d30.970462024882526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3905542fe45e58f7%3A0x5d16c2617cfdbdb8!2sIndian%20Institute%20Of%20Technology%E2%80%93Ropar%20(IIT%E2%80%93Ropar)!5e0!3m2!1sen!2sin!4v1732535756393!5m2!1sen!2sin"
+        width="100%"
+        height="450"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
     </div>
-    <footer class="footer mt-auto py-3">
-      <div class="container">
-        <span class="text-muted"
-          >©2024, encodedcoder (Suresh) and Team<br />Indian Institute of
-          Technology Ropar</span
-        >
-      </div>
-    </footer>
-  </body>
-</html>
+  </div>
+</div>
+{% endblock %}
