--- a/web-app/templates/base.html
+++ b/web-app/templates/base.html
@@ -6,18 +6,17 @@
     <title>{% block title %}My Web App{% endblock %}</title>
     <link
       rel="icon"
-      href="{{ url_for('static', filename='/static/images/favicon.png') }}"
+      href="{{ url_for('static', filename='/images/favicon.png') }}"
       type="image/png"
     />
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='/static/css/styles.css') }}"
+      href="{{ url_for('static', filename='/css/styles.css') }}"
     />
     <link
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link href="/static/css/styles.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
