--- a/web-app/templates/index.html
+++ b/web-app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
 %}
-<h1>Brain Tumor Segmentation</h1>
+<h1 class="page-header">Brain Tumor Segmentation</h1>
 <div class="row justify-content-center">
   <div class="col-md-12 text-center">
     <p>Please select a folder to upload:</p>
@@ -43,18 +43,18 @@
         <p class="text-center">Original Image 2</p>
       </div>
     </div>
-    <div class="card mb-3">
+    <!-- <div class="card mb-3">
       <div class="card-body">
         <div class="image-box" id="originalImage3">Original Image 3</div>
         <p class="text-center">Original Image 3</p>
       </div>
-    </div>
-    <div class="card mb-3">
+    </div> -->
+    <!-- <div class="card mb-3">
       <div class="card-body">
         <div class="image-box" id="originalImage4">Original Image 4</div>
         <p class="text-center">Original Image 4</p>
       </div>
-    </div>
+    </div> -->
   </div>
   <div class="col-md-6">
     <div class="card mb-3">
@@ -69,18 +69,18 @@
         <p class="text-center">Processed Image 2</p>
       </div>
     </div>
-    <div class="card mb-3">
+    <!-- <div class="card mb-3">
       <div class="card-body">
         <div class="image-box" id="processedImage3">Processed Image 3</div>
         <p class="text-center">Processed Image 3</p>
       </div>
-    </div>
-    <div class="card mb-3">
+    </div> -->
+    <!-- <div class="card mb-3">
       <div class="card-body">
         <div class="image-box" id="processedImage4">Processed Image 4</div>
         <p class="text-center">Processed Image 4</p>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
 
