--- a/web-app/templates/team.html
+++ b/web-app/templates/team.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block title %}Team{% endblock %} {% block content
 %}
-<h1>Our Dedicated Team</h1>
+<h1 class="page-header">Our Dedicated Team</h1>
 <div class="card-container">
   <div class="col-md-4 mb-4">
     <div class="card shadow-sm h-100">
