--- a/web-app/templates/about.html
+++ b/web-app/templates/about.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block title %}About Us{% endblock %} {% block
 content %}
-<h1>About Us</h1>
+<h1 class="page-header">About Us</h1>
 <div class="card">
   <div class="card-body">
     <h5 class="card-title">About Our Project</h5>
