--- a/web-app/templates/contact.html
+++ b/web-app/templates/contact.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block title %}Contact Us{% endblock %} {% block
 content %}
-<h1>Contact Us</h1>
+<h1 class="page-header">Contact Us</h1>
 <div class="card mb-3 border">
   <div class="card-body">
     <h5 class="card-title">Get in Touch</h5>
