--- a/web-app/templates/index.html
+++ b/web-app/templates/index.html
@@ -37,12 +37,12 @@
         <p class="text-center">Original Image 1</p>
       </div>
     </div>
-    <div class="card mb-3">
+    <!-- <div class="card mb-3">
       <div class="card-body">
         <div class="image-box" id="originalImage2">Original Image 2</div>
         <p class="text-center">Original Image 2</p>
       </div>
-    </div>
+    </div> -->
     <!-- <div class="card mb-3">
       <div class="card-body">
         <div class="image-box" id="originalImage3">Original Image 3</div>
@@ -63,12 +63,12 @@
         <p class="text-center">Processed Image 1</p>
       </div>
     </div>
-    <div class="card mb-3">
+    <!-- <div class="card mb-3">
       <div class="card-body">
         <div class="image-box" id="processedImage2">Processed Image 2</div>
         <p class="text-center">Processed Image 2</p>
       </div>
-    </div>
+    </div> -->
     <!-- <div class="card mb-3">
       <div class="card-body">
         <div class="image-box" id="processedImage3">Processed Image 3</div>
